fix: send album title as json and add creation modal
